# dashboard

./: .gitignore  LICENSE  compose.yaml  docker-compose-dev.yaml  docker-compose-prod.yaml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/api/: filter.py  main.py  model.py  tags.py
backend/app/: main.py
backend/cli/: __main__.py  populate_database.py  reset_tables.py
backend/db/: __init__.py  constants.py  model.py
backend/scripts/: populate_database.py
frontend/: .dockerignore  Dockerfile  package.json
frontend/nginx/: nginx.conf
proxy/: Dockerfile  nginx-dev.conf  nginx-prod.conf
